<resources>
    <string name="app_name">Business Revision App</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="hint_email">Email</string>
    <string name="hint_name">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password"> Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="test_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter password</string>
    <string name="success_message">Registration</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="text_not_member">No account? Make one</string>
    <string name="error_email_exists">Email already Exists</string>
    <string name="error_password_match">Password Does not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="menu_settings">Settings</string>
    <string name="str_next">Next</string>
    <string name="title_activity_result">Results!!!</string>
    <string name="settings_menu_item">Settings</string>
</resources>
