<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/nestedScrollView"
    tools:context=".activities.RegisterPage">

           <android.support.v7.widget.LinearLayoutCompat
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/textLayoutName"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="40dp">
                   
                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/textInputEditTextName"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" 
                       android:hint="@string/hint_name"
                       android:inputType="text" />
               </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayoutEmail"
                android:layout_marginTop="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputEditTextPassword"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/textInputLayoutConfirmPassword">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputEditTextConfirmPassword"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

           <android.support.v7.widget.AppCompatButton
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/appCompatButtonRegister"
               android:text="@string/test_register"/>

               <android.support.v7.widget.AppCompatTextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/appCompatTextViewLoginLink"
                   android:layout_marginTop="30dp"
                   android:gravity="center"
                   android:text="@string/text_already_member" />

           </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>